--- a/module/Application/view/application/howitworks/index.phtml
+++ b/module/Application/view/application/howitworks/index.phtml
@@ -15,11 +15,15 @@
 			text-aligin:middle;
 		}
 		
-		.box2 {
+		.box2{
 			height:500px;
 			margin-left: auto ;
 			margin-top: auto ;
 			text-align:top;
+		}
+
+		.high{
+			margin-top: 50px;
 		}
 	
 	</style>
@@ -27,7 +31,7 @@
 		
 		<!-- ============ TITLE START ============ -->
 
-		<section id="title">
+		<section id="title" class="high">
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 text-center">
@@ -79,7 +83,7 @@
 						<p>Save your precious time and reduce the frustration of your tech staff. Spend necessary time for follow-up interviews only on qualified, inspiring candidates.</p>
 					</div>
 					<div class="col-sm-6">
-						<p>"We have used UnityAssessments since rapidly expanding our tech team and have found UnityAssessments to save us not only money but a lot of time wasting caused by recruitment companies! The aesthetics and support are of an exceptionally high standard." </p>
+						<p><h4>"We have used UnityAssessments since rapidly expanding our tech team and have found UnityAssessments to save us not only money but a lot of time wasting caused by recruitment companies! The aesthetics and support are of an exceptionally high standard." </h4></p>
 					</div>
 				</div>
 			</div>
@@ -87,9 +91,9 @@
 		
 		<section id="story">
 			<div class="container">
-		
-				<span style="margin-right=""><h3><a href="/demo" class="btn btn-lg ">Are you ready to see how UnityAssessments works?s</a></h3></span>
-
+				
+				<span style="margin-right=""><h3><a href="/demo" class="btn btn-lg ">Are you ready to see how UnityAssessments works?</a></h3></span>
+				
 			</div>
 		</section>
 
