--- a/module/Application/view/application/pricing/index.phtml
+++ b/module/Application/view/application/pricing/index.phtml
@@ -3,23 +3,26 @@
 .box1 {
 	height:300px;
 	 margin-left: auto ;
-	  margin-top: auto ;
-	  text-align:top;
+	  margin-top: auto
+	  ;
+	  text-align: top;
 }
-</style>
-		<!-- ============ HEADER START ============ -->
 
-		
-		<!-- ============ HEADER END ============= -->
-		
+.high{
+	margin-top: 50px;
+	margin-bottom: 100px;
+}
+
+</style>
+	
 		<!-- ============ TITLE START ============ -->
 
-		<section id="title">
+		<section id="title" class="high">
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<h1> Start testing programmers today</h1>
-						<h3>14 day free trial. No obligation. No credit card required. </h3>
+						<h1> Start testing programmers today </h1>
+						<h4> 14 day free trial. No obligation. No credit card required. </h4>
 					</div>
 				</div>
 			</div>
