--- a/module/Application/view/application/howitworks/index.phtml
+++ b/module/Application/view/application/howitworks/index.phtml
@@ -92,8 +92,8 @@
 		<section id="story">
 			<div class="container">
 				
-				<span style="margin-right=""><h3><a href="/demo" class="btn btn-lg ">Are you ready to see how UnityAssessments works?</a></h3></span>
-				
+				<span style="margin-right"><h3><a href="/demo" class="btn btn-lg ">Are you ready to see how UnityAssessments works?</a></h3></span>
+
 			</div>
 		</section>
 
