--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -1,26 +1,26 @@
 <style>
 
-.box1 {
-	height:500px;
-	 margin-left: auto ;
-	  margin-top: auto ;
-	  text-align:top;
-}
+	.box1 {
+		height:500px;
+		 margin-left: auto ;
+		  margin-top: auto ;
+		  text-align:top;
+	}
 
-.space1 {
-	height:50px;
-}
+	.space1 {
+		height:50px;
+	}
 
-.centered{
-	text-aligin:middle;
-}
+	.centered{
+		text-aligin:middle;
+	}
 
-.box2 {
-	height:500px;
-	margin-left: auto ;
-	margin-top: auto ;
-	text-align:top;
-}
+	.box2 {
+		height:500px;
+		margin-left: auto ;
+		margin-top: auto ;
+		text-align:top;
+	}
 
 </style>
 
@@ -37,7 +37,7 @@
 						<div class="slide-content">
 							<h2>Hiring programmers made easy</h2>
 							<h3>Programmer testing solution that matches your job descriptions</h3>
-							<p><a href="jobs.html" class="btn btn-lg btn-default">Try our recruiting platforms</a></p>
+							<p><a href="/demo" class="btn btn-lg btn-default">Try our recruiting platforms</a></p>
 						</div>
 					</div>
 				</div>
@@ -49,11 +49,11 @@
 						<div class="slide-content">
 							<h2>I'm a programmer!</h2>
 							<h3>Take our free lessons & challenges</h3>
-							<p><a href="candidates.html" class="btn btn-lg btn-default">Upgrade your skills now</a></p>
+							<p><a href="/demo" class="btn btn-lg btn-default">Upgrade your skills now</a></p>
 						</div>
 					</div>
 				</div>
-				
+
 			</div>
 
 			<nav id="nav-arrows" class="nav-arrows">
@@ -70,10 +70,9 @@
 
 		<!-- ============ SLIDES END ============ -->
 	
-
 		<!-- ============ Your company's testing solution START ============ -->
 
-		<section id="title">
+		<section id="title" class="color1">
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 text-center">
@@ -147,6 +146,7 @@
 		</section>
 
 		<!-- ============ STATS END ============ -->
+
 		
 		<!-- ============ Your company's testing solution START ============ -->
 		<section id="title">
@@ -218,7 +218,7 @@
 						<p>If you have received an invitation to a UnityAssessments test, go ahead and open it now. You don't have to start the test at once, but the information you find there will help you prepare. </p>
 
 						<p>Our FAQ explains what kind of code you will have to write, how your solutions will be evaluated and talks in detail about the testing procedure.</p>
-						<button aria-expanded="false" data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button">Do a remo test <span class="caret"></span></button>
+						<button aria-expanded="false" data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button">Do a demo test <span class="caret"></span></button> 
 					</div>
 					<div class="col-sm-6">
 						<h2>I want to train</h2>
@@ -227,7 +227,7 @@
 						<p>There are 16 lessons with around 70 training tasks. When you complete a task you will get feedback on its correctness and performance.</p>
 
 						<p>	We also run programming challenges to allow programmers to show off their skills.</p>
-						<button aria-expanded="false" data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button">Lessons <span class="caret"></span></button>
+						<!-- <button aria-expanded="false" data-toggle="dropdown" class="btn btn-info dropdown-toggle" type="button">Lessons <span class="caret"></span></button> -->
 					</div>
 					
 				</div>
@@ -235,6 +235,3 @@
 		</section>
 
 		<!-- ============ STORY END ============ -->
-		
-		
-		
