--- a/module/Application/view/application/pricing/index.phtml
+++ b/module/Application/view/application/pricing/index.phtml
@@ -1,103 +1,46 @@
 <style>
 
-.box1 {
-	height:300px;
-	 margin-left: auto ;
-	  margin-top: auto
-	  ;
-	  text-align: top;
-}
+	.box1 {
+		height:300px;
+		 margin-left: auto ;
+		  margin-top: auto;
+		  text-align: top;
+	}
 
-.high{
-	margin-top: 50px;
-	margin-bottom: 100px;
-}
+	.high{
+		margin-top: 50px;
+		margin-bottom: 100px;
+	}
 
 </style>
-	
-		<!-- ============ TITLE START ============ -->
+
+				
 
 		<section id="title" class="high">
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<h1> Start testing programmers today </h1>
-						<h4> 14 day free trial. No obligation. No credit card required. </h4>
+
+						<table width="900">
+							<tr>
+								<td><img src="../images/cash.png" width="120px"></td>
+								<td>
+								<h1>Questions about pricing? </h1>
+								<h4>Call or use the chat box to talk with us </h4>
+								</td>
+							</tr>
+						</table>
+
 					</div>
 				</div>
 			</div>
 		</section>
-
-		<!-- ============ TITLE END ============ -->
-		
-				
-		<!-- ============ Your company's testing solution START ============ -->
-
-		<section id="title" class="color1">
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-12 text-center">
-						<h1>UnityAssessments for programmers</h1>
-						<h4>See how you can improve your skills.</h4>
-					</div>
-				</div>
-			</div>
-		</section>
-
-		<section id="team" class="color1">
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-12">
-						<div class="owl-carousel centered">
-
-							<!-- Team Member 1 -->
-							<div class="team-member text-center img-rounded box1">
-								<img src="../images/feature_report.svg" class="img-responsive" alt="" />
-								<h5 class="space1">SCREEN OBJECTIVELY</h5>
-								<p style="height:100">using top quality tasks.</p>								
-							</div>
-
-							<!-- Team Member 2 -->
-							<div class="team-member text-center img-rounded box1">
-								<img src="../images/feature_challenge.svg" class="img-responsive" alt="" />
-								<h5 class="space1">SOURCE MORE CANDIDATES </h5>
-								<p>with customized challenges .</p>
-							</div>
-
-							<!-- Team Member 3 -->
-							<div class="team-member text-center img-rounded box1">
-								<img src="../images/feature_task.svg" class="img-responsive " alt="" />
-								<h5 class="space1">GAIN DEEPER INSIGHT </h5>
-								<p>with comprehensive reports.</p>
-							</div>
-								
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		
-		
-		
-		<!-- ============ Your company's testing solution START ============ -->
-
-		<section id="title"  class="color1">
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-12 text-center">
-						<h1>Questions about pricing? </h1>
-						<h3>Call or use the chat box to talk with us </h3>
-					</div>
-				</div>
-			</div>
-		</section>
-
 
 		<!-- ============ Your company's testing solution END ============ -->	
 
 		<!-- ============ STORY START ============ -->
 
-		<section id="story" class="color1">
+		<section id="story" >
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-6">
@@ -117,22 +60,74 @@
 		
 				<!-- ============ STORY START ============ -->
 
-		<section id="story" class="color1">
+		<section id="story" >
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-6">
 						<h2>Can I get help creating my tests?  </h2>
 						<p>Yes. Ask our experts to build a test for your job description and start screening right away. </p>
-									</div>
+					</div>
 					<div class="col-sm-6">
 						<h2>Do you create custom packages? </h2>
 						<p>Yes. UnityAssessments is adaptable to your needs and we are happy to customize it accordingly. </p>
 					</div>
-					
 				</div>
 			</div>
 		</section>
 
 		<!-- ============ STORY END ============ -->
-		
+
+
+		<section id="title"  class="color1" >
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-12 text-center">
+						<h1>Unityssessments for programmers</h1>
+						<h4>See how you can improve your skills.</h4>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section id="team" class="color1">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-12">
+						<div class="owl-carousel centered">
+
+							<!-- Team Member 1 -->
+							<div class="team-member text-center img-rounded box1 section2">
+								<img src="../images/feature_report.svg" class="img-responsive" alt="" />
+								<h5 class="space1">SCREEN OBJECTIVELY</h5>
+								<p style="height:100">using top quality tasks.</p>								
+							</div>
+
+							<!-- Team Member 2 -->
+							<div class="team-member text-center img-rounded box1  section2">
+								<img src="../images/feature_challenge.svg" class="img-responsive" alt="" />
+								<h5 class="space1">SOURCE MORE CANDIDATES </h5>
+								<p>with customized challenges .</p>
+							</div>
+
+							<!-- Team Member 3 -->
+							<div class="team-member text-center img-rounded box1  section2">
+								<img src="../images/feature_task.svg" class="img-responsive " alt="" />
+								<h5 class="space1">GAIN DEEPER INSIGHT </h5>
+								<p>with comprehensive reports.</p>
+							</div>
+
+							<!-- Team Member 3 -->
+							<div class="team-member text-center img-rounded box1  section2">
+								<img src="../images/cash.png" class="img-responsive " alt="" width="120px">
+								<h5 class="space1">SAvE MONBY </h5>
+								<p>Add a real value to yurs services.</p>
+							</div>
+
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- ============ Your company's testing solution START ============ -->
 		
