--- a/module/Application/view/application/howitworks/index.phtml
+++ b/module/Application/view/application/howitworks/index.phtml
@@ -25,9 +25,12 @@
 		.high{
 			margin-top: 50px;
 		}
+
+		section {
+		    padding: 20px 0;
+		}
 	
-	</style>
-		
+	</style>		
 		
 		<!-- ============ TITLE START ============ -->
 
@@ -35,7 +38,14 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<h1>UnityAssessments saves you time and money</h1>
+
+						<table width="100%">
+							<tr>
+								<td><img src="../images/savetime.png"></td>
+								<td><h1>UnityAssessments saves you time and money</h1>
+							</tr>
+						</table>
+
 					</div>
 				</div>
 			</div>
@@ -45,7 +55,7 @@
 
 		<!-- ============ STORY START ============ -->
 
-		<section id="story">
+		<section id="story" >
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-6">
@@ -75,25 +85,25 @@
 			</div>
 		</section>
 		
-		<section id="story">
+		<section id="story" class="section2">
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-6">
 						<h2>Interview only the best ones</h2>
 						<p>Save your precious time and reduce the frustration of your tech staff. Spend necessary time for follow-up interviews only on qualified, inspiring candidates.</p>
 					</div>
-					<div class="col-sm-6">
-						<p><h4>"We have used UnityAssessments since rapidly expanding our tech team and have found UnityAssessments to save us not only money but a lot of time wasting caused by recruitment companies! The aesthetics and support are of an exceptionally high standard." </h4></p>
+					<div class="col-sm-6 color3">
+						<div class="featured-job">
+							<img class="img-circle pull-left" alt="" src="../images/peterlord.jpg" width="75px">
+						<div class="title text-left" >
+							<h5>Peter Lord</h5>
+							<p>CEO</p>
+						</div>
+						<div class="container"></div>
+						<div class="description"><b>"We have used UnityAssessments since rapidly expanding our tech team and have found UnityAssessments to save us not only money but a lot of time wasting caused by recruitment companies! The aesthetics and support are of an exceptionally high standard." </b></div>
+						</div>
 					</div>
 				</div>
 			</div>
 		</section>
 		
-		<section id="story">
-			<div class="container">
-				
-				<span style="margin-right"><h3><a href="/demo" class="btn btn-lg ">Are you ready to see how UnityAssessments works?</a></h3></span>
-
-			</div>
-		</section>
-
